# Django-Online-Shop

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: run_tests.yml
common/: mixins.py
core/apps/carts/: admin.py  mixins.py  models.py  tests.py  urls.py  utils.py  views.py
core/apps/carts/migrations/: 0001_initial.py  (+1 more)
core/apps/favorites/: admin.py  apps.py  models.py  tests.py  urls.py  utils.py  views.py
core/apps/goods/: admin.py  apps.py  forms.py  mixins.py  models.py  tests.py  urls.py  utils.py  views.py
core/apps/main/: forms.py  tests.py  urls.py  views.py
core/apps/orders/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
core/apps/users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
core/project/: asgi.py  settings.py  urls.py  wsgi.py
fixtures/goods/: cats.json  prod.json  prods.json  products.json
static/css/: style.css
static/js/: jquery-ajax.js  main.js  navbar.js  scripts.js
templates/: base.html
templates/carts/includes/: included_cart.html
templates/favorites/: favorites-list.html
templates/goods/: catalog.html  product.html
templates/includes/: cart_button.html  notifications.html
templates/main/: about.html  all_categories.html  index.html
templates/orders/: create_order.html  my_orders.html
templates/orders/includes/: included_orders.html
templates/users/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  profile.html  registration.html  users-cart.html
(+22 files in other folders)
