[tool.poetry]
name = "django-online-shop"
version = "0.1.0"
description = ""
authors = ["MaxBakshaev <risen.2011@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.4"
django-debug-toolbar = "^4.4.6"
pillow = "^11.0.0"
psycopg2 = "^2.9.10"
dotenv = "^0.9.9"
flake8 = "^7.3.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
